<resources>
    <string name="app_name">Movie App</string>
    <string name="popular_films">Популярные фильмы</string>
    <string name="get_random_movie">Получить фильм</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="popular_movie">Популярное</string>
    <string name="random_movie">Случайное</string>
    <string name="saved_movie">Сохраненное</string>
    <string name="movie_release_date_format"><![CDATA[<b>Дата выхода: </b>%1$s]]></string>
    <string name="cast_header">Актеры</string>
    <string name="genre_header">Жанр</string>
    <string name="saved_movies_header">Сохраненные фильмы</string>
    <string name="year_type_error">Введите только цифры</string>
    <string name="year_number_error">Год должен быть от 1900 до %s</string>
    <string name="genre_choice_header">Выберите жанр</string>
    <string name="enter_genre">Введите жанр</string>
    <string name="random_error_msg">Произошла ошибка при загрузке фильма</string>
    <string name="genre_download_error">Произошла ошибка при загрузке жанров</string>
    <string name="download_error_text">Ошибка загрузки, проверьте подключение к интернету</string>
    <string name="retry_text">Повторить</string>
    <string name="error_text">Произошла непредвиденная ошибка, перезапустите приложение</string>
</resources>