<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.genres_bottom_sheet.GenreBottomSheet">

    <TextView
        android:id="@+id/genreChoiceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/genre_choice_header"
        android:textAppearance="@style/header_style"
        android:textColor="@color/dark_blue" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/genreChoiceEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:hint="@string/enter_genre"
        android:inputType="textCapWords"
        android:textAppearance="@style/description_style"
        android:textColor="@color/dark_blue" />

    <TextView
        android:id="@+id/downloadError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/genre_download_error"
        android:textAppearance="@style/description_style"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:visibility="invisible" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/genresChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:theme="@style/Theme.TMDBKotlinApp" />

</androidx.appcompat.widget.LinearLayoutCompat>